removed BFS legacy

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ bin/test
 .vscode/ipch/a359c6e72187a2de/Dijkstra.ipch
 .vscode/ipch/a359c6e72187a2de/mmap_address.bin
 .vscode/ipch/c49d1c60af82b9bd/mmap_address.bin
+.vscode/settings.json
