--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ bin/test
 .vscode/ipch/a359c6e72187a2de/mmap_address.bin
 .vscode/ipch/c49d1c60af82b9bd/mmap_address.bin
 .vscode/settings.json
+.vscode/ipch/4e4061840c8e399d/mmap_address.bin
